Added Shop and Subscription Page

--- a/src/EventRegistrationForm.css
+++ b/src/EventRegistrationForm.css
@@ -27,6 +27,7 @@ body {
     border: 1px solid #e3e6e9;
     margin: auto; /* Centering */
     margin-bottom: 20px;
+    min-width: 40%;
 }
 
 /* Title styling */
